--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "daisyui": "^2.43.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "flowbite": "^2.3.0",
     "next": "^13.0.6",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-responsive-carousel": "^3.2.23",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
